# allegro_flare

./: .gitignore  .gitignoreOLD  .travis.yml  CMakeLists.txt  Doxyfile  GEMINI.md  LICENSE  Makefile  Makefile.new  ProjectMakefile  README.md  TileMesh_methods.html  appveyor.yml  build  build.bat  flare_log.txt  licenses.txt
demos/: Snake.cpp
docs/: README.md  compile_docs.py  doc_entries.db  docstyle.css  index.html  parse_source.py
documentation/: AllegroFlare-router-overview-03.drawio  AllegroFlare-router-overview-04.drawio  AllegroFlare-router-overview.drawio  common_display_dimensions.md  dependents.json  design_philosophy.md  how_to_pause_gameplay.md  index.htm  index.html  key_lock_combinations-02.drawio  licenses-and-attributions.txt  order-of-collisions-platforming2d.md  saving_and_loading.md  style_guide-visual.md  style_guide.md  suspended_keyboard_state.md  tile_maps.md  types_of_tests.md
examples/: achievements_example.cpp  demo_ray_casting.cpp  dev_gui_automation_controller.cpp  dev_gui_clock_widget.cpp  dev_gui_console.cpp  dev_gui_nested_widget_coordinates.cpp  dev_gui_notification_bubble.cpp  dev_gui_piano_keyboard.cpp  dev_gui_software_keyboard.cpp  dev_transition_fx.cpp  element_id_graph.cpp  ex_balsamiq_loader.cpp  ex_blur.cpp  ex_config_auto_init.cpp  ex_filesys_change_notification_screen.cpp  ex_filesys_watcher.cpp  ex_gamer_input.cpp  ex_generated_textures.cpp  ex_gui.cpp  ex_gui_calculator.cpp  ex_gui_camera.cpp  ex_gui_color_picker.cpp  ex_gui_framed_window.cpp  ex_gui_function_parser.cpp  ex_gui_keyboard_joystick_modes.cpp  ex_gui_music_calculator.cpp  ex_gui_picking_buffer.cpp  ex_gui_scroll_area.cpp  ex_gui_scrollbar.cpp  ex_gui_skeleton.cpp  ex_gui_tool_layout_loader.cpp  ex_gui_widget_inspector.cpp  ex_gui_widget_timer.cpp  ex_gui_widgets.cpp  ex_histogram.cpp  ex_masked_bitmap.cpp  ex_model_viewer.cpp  ex_music_notation.cpp  ex_ray_casting.cpp  ex_render_cache.cpp  (+15 more)
include/: BuildInfo.hpp  ReleaseInfo.hpp
programs/: asset_importer.cpp  backtracer_dev.cpp  basic_3d.cpp  basic_3d_allegro_flare.cpp  basic_3d_multi.cpp  basic_3d_scene.cpp  character_profile_generator.cpp  client.cpp  const_char_ptr_t.cpp  cube_shooter.cpp  dialog_player.cpp  display_crash.cpp  erase_me.cpp  error_test.cpp  keyboard_mod_example.cpp  lorem_ipsum.cpp  monoline_blob_generator.cpp  motion_edit.cpp  motion_edit.hpp  motion_edit_control_client.cpp  motion_edit_server.cpp  pixel_perfect_downscale.cpp  server.cpp  software_keyboard.cpp  test_ttf.cpp  wicked_funz_demo.cpp  wicked_tile_demo.cpp  wicked_worked.cpp
project_files/: autotile-test-sandbox.tiled-session  autotile-tileset-1-01.aseprite  autotile-tileset-1-01.tsx  autotile-tileset-1-02.aseprite  autotile-tileset-2-01.aseprite  collision-tile-map-01.aseprite  collision-tile-map-01.tsx  map-1-01.tmx
quintessence/: BuildInfo.q.yml  ReleaseInfo.q.yml
scripts/: build_run_all_tests_in_chunks.py  build_win64_release.sh  list_asset.sh  play_tiled_map.sh
source/: appearance2d.cpp  attributes.cpp  automation.cpp  bitmap_object.cpp  blender.cpp  camera2d.cpp  camera3d.cpp  clipboard_generic.cpp  clipboard_osx.cpp  clipboard_win.cpp  color.cpp  config.cpp  cubemap.cpp  data_attr.cpp  decorated_cout.cpp  display.cpp  drawing_interface.cpp  element_id.cpp  file_downloader.cpp  file_path.cpp  file_path_object.cpp  framework.cpp  frustum.cpp  generate_textures.cpp  grid2d.cpp  i18n.cpp  identification.cpp  image_processing.cpp  interpolators.cpp  json.cpp  md5.cpp  midi_win.cpp  model.cpp  model3d.cpp  motion.cpp  music_notation.cpp  object2d.cpp  path2d.cpp  placement2d.cpp  placement3d.cpp  (+18 more)
src/: BuildInfo.cpp  ReleaseInfo.cpp  TEST.cpp  Vec2D.cpp  box.cpp  (+108 more)
(+4062 files in other folders)
